# serverless-portfolio

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
site/: error.html  index.html
src/: README.md  content.md  generate_site.py  pyproject.toml
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
