[project]
name = "aws-static-website"
version = "0.1.0"
description = "Python scripts for generating static website content"
authors = [
    {name = "Joshua Coffey"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "markdown (>=3.8.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
